--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -18,3 +18,15 @@ $jumbotron-bg:                 #bdc3c7;
 .navbar-brand {
   font-weight: bold;
 }
+
+// Classes
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+// Usage as mixins
+.element {
+  .center-block{};
+}
