--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
-<div class="jumbotron center">
-     <h1>Welcome to my app!</h1>
-     <p>
-       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
-       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
-  </p>    
+<div class="container-fluid">
+     <h1>Welcome</h1>
+     <% if user_signed_in? %>
+     		#do something
+     <% else %>
+       <p>
+
+         <%= link_to "Log in", new_user_session_path, class: "btn btn-default" %>
+         or
+         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary" %>
+      </p>    
+  <% end %>
 </div>
