--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,8 +25,8 @@
       </ul>
          <!-- nav bar righr -->
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li> 
+        <li><%= link_to "My Auctions", auctions_path %></li>
+        <li><%= link_to "My Profile", my_profile_path %></li> 
           <% if user_signed_in? %>
 
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
