--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@auction) do |f| %>
+<%= form_for @auction, html: { multipart: true } do |f| %>
   <% if @auction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@auction.errors.count, "error") %> prohibited this auction from being saved:</h2>
@@ -10,6 +10,11 @@
       </ul>
     </div>
   <% end %>
+ 
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
+  </div>
 
   <div class="form-group">
     <%= f.label :title %><br>
