--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+
+<%= image_tag @auction.image.url(:medium) %>
 
 <p>
   <strong>Title:</strong>
@@ -15,5 +16,7 @@
   <%= @auction.user %>
 </p>
 
-<%= link_to 'Edit', edit_auction_path(@auction) %> |
+<% if @auction.user == current_user %>
+  <%= link_to 'Edit', edit_auction_path(@auction) %> 
+<% end %>
 <%= link_to 'Back', auctions_path %>
