--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,7 +25,7 @@
       </ul>
          <!-- nav bar righr -->
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "My Auctions", auctions_path %></li>
+        <li><%= link_to "My Auctions", my_auctions_path %></li>
         <li><%= link_to "My Profile", my_profile_path %></li> 
           <% if user_signed_in? %>
 
