--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="/">My Ebayish</a>
+      <a class="navbar-brand" href"new_user_session_path"=>My Ebayish</a>
 
     </div>
 
