--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,11 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.label :username %>
+        <%= f.text_field :username, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form-control", :autofocus => true %>
       </div>
@@ -27,6 +32,7 @@
         <%= f.submit "Update", class: "btn btn-primary" %>
       </div>
     <% end %>
+
   </div>
   <div class="panel-footer">
     <h3>Cancel my account</h3>
