--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,16 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name, class: "form-control"%>
+      </div> 
+
+      <div class="form-group">
         <%= f.label :username %>
         <%= f.text_field :username , class: "form-control"%>
       </div>
