--- a/app/views/auctions/_auction.html.erb
+++ b/app/views/auctions/_auction.html.erb
@@ -3,6 +3,7 @@
   <td><%= auction.title %></td>
   <td><%= auction.description %></td>
   <td><%= auction.user %></td>
+  <td><%= auction.expires_at_date %></td><br>
   <td><%= link_to 'Show', auction %></td>
   <% if auction.user == current_user %>
     <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
