--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -25,6 +25,19 @@
     <%= f.text_area :description, class: "form-control" %>
   </div>
 
+  <div class-"form-group">
+  <%= f.label :start_date %>
+  <%= f.date_select :starts_at_date %>
+  <%= f.text_field  :starts_at_time %>
+  </div>
+
+  <div class="form-group">
+  <%= f.label :end_date %>
+  <%= f.date_select :expires_at_date %>
+  <%= f.text_field :expires_at_time %>
+  </div
+
+
   <div class="actions">
     <%= f.submit class: "btn-btn-primary"%>
   </div>
