--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -27,13 +27,13 @@
 
   <div class-"form-group">
   <%= f.label :start_date %>
-  <%= f.date_select :starts_at_date %>
+  <%= f.date_select :starts_at_date, order: [:month, :day, :year] %>
   <%= f.text_field  :starts_at_time %>
   </div>
 
   <div class="form-group">
   <%= f.label :end_date %>
-  <%= f.date_select :expires_at_date %>
+  <%= f.date_select :expires_at_date, order: [:month, :day, :year] %>
   <%= f.text_field :expires_at_time %>
   </div
 
