Added Auction Bid Model

--- a/app/views/auctions/edit.html.erb
+++ b/app/views/auctions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @auction %> |
-<%= link_to 'Back', auctions_path %>
+<center><%= link_to 'Show', @auction %><center/> 
+<center><%= link_to 'Back', auctions_path %><center/>
