--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
         <li class="active">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li> 
-        <li><%= link_to "Link", '#' %></li>
+        <li><%= link_to "Current Auctions", auctions_path %></li>
         <li><%= link_to "Link", '#' %></li> 
         </li>
       </ul>
