--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -28,13 +28,13 @@
   <div class-"form-group">
   <%= f.label :start_date %>
   <%= f.date_select :starts_at_date, order: [:month, :day, :year] %>
-  <%= f.text_field  :starts_at_time %>
+  <%= f.text_field  :starts_at_time, order: [:hour, :min, :sec] %>
   </div>
 
   <div class="form-group">
   <%= f.label :end_date %>
   <%= f.date_select :expires_at_date, order: [:month, :day, :year] %>
-  <%= f.text_field :expires_at_time %>
+  <%= f.text_field :expires_at_time, order: [:hour, :min, :sec] %>
   </div
 
 
