Updated Image Views to Thumbnails

--- a/app/views/auctions/_auction.html.erb
+++ b/app/views/auctions/_auction.html.erb
@@ -1,12 +1,15 @@
-<tr>
-  <td><%= image_tag auction.image.url(:medium) %></td>
-  <td><%= auction.title %></td>
+<table width='100%' border='0'>
+<thead>
+    <tr>
+  <td><%= image_tag auction.image.url(:thumb) %></td>
+  <td><%= auction.title %></td></center>
   <td><%= auction.description %></td>
-  <td><%= auction.user %></td>
-  <td><%= auction.expires_at_date %></td><br>
+  <td><%= auction.user %></td></center>
+  <td><%= auction.expires_at_date %></td>
   <td><%= link_to 'Show', auction %></td>
   <% if auction.user == current_user %>
     <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
     <td><%= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   <% end %>
 </tr>
+</thead>
