--- a/app/views/auctions/_auctions.html.erb
+++ b/app/views/auctions/_auctions.html.erb
@@ -10,6 +10,7 @@
       <th>Description</th>
       <th>User</th>
       <th>End Date</th>
+      <th>Current Highest Bid</th>
     </tr>
   </thead>
 
