Added Bid entry to form

--- a/app/views/auctions/_auction.html.erb
+++ b/app/views/auctions/_auction.html.erb
@@ -1,4 +1,4 @@
-<table width='100%' border='0'>
+<table class="table table-striped"
 <thead>
     <tr>
   <td><%= image_tag auction.image.url(:thumb) %></td>
@@ -6,6 +6,7 @@
   <td><%= auction.description %></td>
   <td><%= auction.user %></td></center>
   <td><%= auction.expires_at_date %></td>
+  <td><%= auction.highest_bid %></td>
   <td><%= link_to 'Show', auction %></td>
   <% if auction.user == current_user %>
     <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
@@ -13,3 +14,4 @@
   <% end %>
 </tr>
 </thead>
+</table>
