--- a/app/views/auctions/_auctions.html.erb
+++ b/app/views/auctions/_auctions.html.erb
@@ -2,7 +2,7 @@
   <h3><%= link_to 'New auction', new_auction_path %></h3>
 <% end %>
 
-<table width='100%' border='0'>
+<table >
   <thead>
     <tr>
       <th>Image</th>
