--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -25,7 +25,7 @@
     <%= f.text_area :description, class: "form-control" %>
   </div>
 
-  <div class-"form-group">
+  <div class="form-group">
   <%= f.label :start_date %>
   <%= f.date_select :starts_at_date, order: [:month, :day, :year] %>
   <%= f.text_field  :starts_at_time, order: [:hour, :min, :sec] %>
@@ -35,7 +35,14 @@
   <%= f.label :end_date %>
   <%= f.date_select :expires_at_date, order: [:month, :day, :year] %>
   <%= f.text_field :expires_at_time, order: [:hour, :min, :sec] %>
-  </div
+  </div>
+
+  <div class="form-group">
+    <%= f.label :bid %>
+    <%= f.text_field :amount %>
+  </div>
+  
+
 
 
   <div class="actions">
