--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,4 +1,5 @@
 
+
 <%= image_tag @auction.image.url(:thunmb) %>
 
 <p>
@@ -25,7 +26,9 @@
   <strong>Highest Current Bid:</strong>
 </p>
 
-
+<p> 
+  <strong>Place Bid:</strong>
+</p>
 
 <% if @auction.user == current_user %>
   <%= link_to 'Edit', edit_auction_path(@auction) %> 
