--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -37,13 +37,17 @@
   <%= f.text_field :expires_at_time, order: [:hour, :min, :sec] %>
   </div>
 
+
   <div class="form-group">
-    <%= f.label :bid %>
-    <%= f.text_field :amount %>
+    <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+    <div class="input-group">
+      <div class="input-group-addon">$</div>
+      <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
+      <div class="input-group-addon">.00</div>
+    </div>
   </div>
+</form>
   
-
-
 
   <div class="actions">
     <%= f.submit class: "btn-btn-primary"%>
