Updated auctionbids to auction_bid and made area to Place Bet

--- a/app/views/auctions/_auction.html.erb
+++ b/app/views/auctions/_auction.html.erb
@@ -1,3 +1,4 @@
+
 <table class="table table-striped"
 <thead>
     <tr>
@@ -6,6 +7,7 @@
   <td><%= auction.description %></td>
   <td><%= auction.user %></td></center>
   <td><%= auction.expires_at_date %></td>
+  <td><%= link_to 'Place Bid', new_auction_auction_bid_path(auction)  %></td>
   <td><%= link_to 'Show', auction %></td>
   <% if auction.user == current_user %>
     <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
