--- a/app/views/auctions/_auctions.html.erb
+++ b/app/views/auctions/_auctions.html.erb
@@ -11,6 +11,7 @@
       <th>User</th>
       <th>End Date</th>
       <th>Current Highest Bid</th>
+      <th>Place Bid</th>
     </tr>
   </thead>
 
