--- a/app/views/auction_bids/index.html.erb
+++ b/app/views/auction_bids/index.html.erb
@@ -2,11 +2,11 @@
 <h2><%= link_to @auction.title, @auction %></h2>
 <p><%= @auction.description %></p>
 
-<% @bids.each do |bid| %>
-  <% if bid.bidder %>
+<% @auction_bids.each do |bid| %>
+  <% if bid.user %>
     <div>
-      <%= bid.bidder.name %> bid
-      <%= number_to_currency(bid.amount/100) %> at 
+      <%= bid.user.name %>'s bid
+      <%= number_to_currency(bid.bid/100) %> at 
       <%= bid.created_at.strftime("%a, %B %e, %Y - %l:%m:%M %p") %>
     </div>
   <% end %>
