--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -25,8 +25,7 @@
 
 <p>
   <strong>Highest Current Bid:</strong>
-
-</p>
+  <%= @auction.highest_auction_bid %>
 
 <p><%= link_to "Bid on this auction", new_auction_auction_bid_path(@auction)  %></p>
 
