--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -35,3 +35,22 @@ $jumbotron-bg:                 #bdc3c7;
 .checkbox input[type="checkbox"] {
   margin-left: 0;
 }
+
+//Tables
+
+table {
+    border-spacing: 5px;
+    table-layout: fixed;
+}
+
+th {
+  font-weight: bold;
+  text-align: center;
+}
+th, td {
+  vertical-align: justify;
+  padding: 10px;
+  width: 33%; 
+}
+
+
