Added user Profile Information

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,7 +1,6 @@
 <h4><%= link_to 'Back', auctions_path %></h4>
 
 
-<p>
 <%= image_tag @auction.image.url(:thumb) %>
 </p>
 
@@ -19,18 +18,17 @@
   <%= @auction.user %>
 </p>
 
-<p> 
+<p>
   <strong>End Time:</strong>
-    <%= @auction.expires_at_date %>  
+    <%= @auction.expires_at_date %>
 </p>
 
 <p>
-  <strong>Highest Current Bid:</strong>
+  <strong>Current Bid:</strong>
   <%= @auction.highest_auction_bid %>
+
+
 
   <p><h4><%= link_to "Bid on this auction", new_auction_auction_bid_path(@auction) %></h4></p>
 
-<% if @auction.user == current_user %>
-  <%= link_to 'Edit', edit_auction_path(@auction) %> 
-  <% end %>
 
