--- a/app/views/auctions/_auction.html.erb
+++ b/app/views/auctions/_auction.html.erb
@@ -1,19 +1,21 @@
-
 <table>
 <thead>
   <tr>
-      <%= link_to auction do %>
-      <%= image_tag auction.image.url(:thumb) %>
+    <td><%= link_to auction do %>
+      <%= image_tag auction.image.url(:thumb) %></td>
     <% end %>
   <td><%= auction.title %></td></center>
   <td><%= auction.description %></td>
   <td><%= auction.expires_at_date %></td>
   <td><%= auction.highest_auction_bid %></td>
 
+  
   <% if auction.user == current_user %>
-    <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
-    <td><%= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <%= link_to 'Edit', edit_auction_path(auction) %>
+    <%= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
+
+
 </tr>
 </thead>
 </table>
