--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,4 +1,5 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
+
+<div id="carousel-example-generic" class="carousel slide container" data-ride="carousel" data-interval="3000">
 
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -11,19 +12,19 @@
   <div class="carousel-inner">
     <div class="item active">
       <div class="img-responsive center-block">
-      <%= image_tag 'Eubie.jpg' %>
+      <%= image_tag 'images.jpg' %>
     </div>
   </div>
 
   <div class="item">
     <div class="img-responsive center-block">
-       <%= image_tag 'colored_books.jpg'  %>
-     </div>
+      <%= image_tag 'colored_books.jpg' %>
    </div>
+  </div>
 
    <div class="item">
      <div class="img-responsive center-block">
-       <%= image_tag 'open_book.jpg'  %>
+       <%= image_tag 'books-1.jpg'  %>
     </div>
   </div>
  
