--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -66,9 +66,10 @@ th, td {
 .carousel {
   max-height: 300px;
   overflow: hidden;
-
+}
   .item img {
-    width: 100%;
+    width: 1024px;
     height: 300px;
   }
-}
+
+
