--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,17 +1,5 @@
+<%= render partial: "shared/error_messages", locals: { record: @auction_bid } %>
 <%= form_for @profile, url: user_profile_path(current_user, @profile) do |p| %>
-  <% if @profile.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
-
-      <ul>
-      <% @profile.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-
 
      <div class="form-group">
        <%= p.label :first_name %>
