--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,7 @@
           <li><%= link_to "About", about_path %></li> 
           <li><%= link_to "Current Auctions", auctions_path %></li>
           <li><%= link_to "My Auctions", my_auctions_path %></li>
-          <li><%= link_to "My Profile", edit_user_profile_path(current_user)%></li> 
+          <li><%= profile_link_for_current_user.html_safe %></li> 
           <li><%= link_to "Account Settings",edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
