--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/error_messages", locals: { record: @auction_bid } %>
+<%= render partial: "shared/error_messages", locals: { record: @profile } %>
 <%= form_for @profile, url: user_profile_path(current_user, @profile) do |p| %>
 
      <div class="form-group">
@@ -11,11 +11,10 @@
      </div>
 
 
-
       <div class="form-group">
         <%= p.label :blurb %>
         <%= p.text_area :blurb, :class => "form-control" %>
-         <%= p.hidden_field :user_id, :value => current_user.id %>
+        <%= p.hidden_field :user_id, :value => current_user.id %>
 
       </div>
 
