--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,6 +8,11 @@
 
 
   <p>
+    <strong>Username:</strong>
+     <%= @profile.username %>
+  </p>
+
+  <p>
     <strong>Name:</strong>
       <%= @profile.first_name %>
       <%= @profile.last_name %>
@@ -17,7 +22,7 @@
   <p> 
     <strong>About Me:</strong>
       <%= @profile.blurb %>
-      </p>
+  </p>
 <% else %>
   <h1>This user has not created a profile.</h1>
 <% end %>
