--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -2,6 +2,11 @@
 <%= form_for @profile, url: user_profile_path(current_user, @profile) do |p| %>
 
      <div class="form-group">
+      <%= p.label :image %>
+      <%= p.file_field :image, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
        <%= p.label :username %>
        <%= p.text_field :username , class: "form-control"%>
      </div>
