--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,6 +6,9 @@
     <h1><%= @profile %>'s Profile</h1>
   <% end %>
 
+  <p>
+  <%= image_tag @profile.image.url(:medium) %>
+  </p>
 
   <p>
     <strong>Username:</strong>
