Moved Link to shared/errors link to top of page to avoid NoMethod for 'erorrs'

--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/error_messages", locals: { record: @auction_bid } %>
+<%= render partial: "shared/error_messages", locals: { record: @auction } %>
 <%= form_for @auction, html: { multipart: true } do |f| %>
 
     <div class="form-group">
@@ -36,3 +36,4 @@
   </div>
 
 <% end %>
+
