Corrected code to show Expires At Date

--- a/app/views/pages/_auction.html.erb
+++ b/app/views/pages/_auction.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   <td><%= auction.title %></td></center>
   <td><%= auction.description %></td>
-  <td><%= auction.expires_at_date %></td>
+  <td><%= auction.expires_at %></td>
   <td><%= auction.highest_auction_bid %></td>
 
   
