Changed expires_at_date to expires_at

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -20,8 +20,8 @@
 
 <p>
   <strong>End Time:</strong>
-    <%= @auction.expires_at.strftime("%m/%d/%Y %l:%M %p") %>
-</p>
+  <%= @auction.expires_at %>
+ </p>
 
 <p>
   <strong>Current Bid:</strong>
