Corrected Format for Number to currency
Added, separator, delimiter and precision

--- a/app/views/auction_bids/index.html.erb
+++ b/app/views/auction_bids/index.html.erb
@@ -6,7 +6,7 @@
   <% if bid.user %>
     <div>
       <%= bid.user.name %>'s bid
-      <%= number_to_currency(@auctions.bid)%> at 
+      <%= number_to_currency(@auctions.bid, separator: ",", delimiter: "", precision: 2) %> at
       <%= bid.created_at.strftime("%a, %B %e, %Y - %l:%m:%M %p") %>
     </div>
   <% end %>
