--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -28,7 +28,9 @@
   <%= @auction.highest_auction_bid %>
 
 
-
-  <p><h4><%= link_to "Bid on this auction", new_auction_auction_bid_path(@auction) %></h4></p>
-
-
+ <% if @auctions = current_user.auctions %>
+    <h4><%= link_to 'Edit', edit_auction_path(@auction) %></h4>
+    <h4><%= link_to 'Destroy', auction_path, method: :delete, data: { confirm: 'Are you sure?' } %></h4>
+  <% else %>
+    <h4><%= link_to "Bid on this auction", new_auction_auction_bid_path(@auction) %></h4>
+<% end %>
