Fixed expires_at formatting

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -20,7 +20,7 @@
 
 <p>
   <strong>End Time:</strong>
-  <%= @auction.expires_at.strftime("%m/%d/%Y %l:%M %P") %>
+  <%= @auction.expires_at %>
  </p>
 
 <p>
