Changed image from thumbnail to medium

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,7 +1,7 @@
 <h4><%= link_to 'Back', auctions_path %></h4>
 
 
-<%= image_tag @auction.image.url(:thumb) %>
+<%= image_tag @auction.image.url(:medium) %>
 </p>
 
 <p>
