Added current_user to Welcome Screen

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-  <h1>Welcome</h1>
+  <h1>Welcome <%= current_user %></h1>
 
   <%= render partial: "carousel" %>
-
+</div>
