--- a/app/views/auctions/_auctions.html.erb
+++ b/app/views/auctions/_auctions.html.erb
@@ -10,11 +10,16 @@
     <div class="box panel panel-default">
        <%= link_to image_tag(auction.image.url(:medium)), auction %>
          <div class="panel-body">
-           <%= auction.title %>
-           <%= auction.description %>
-           <%= auction.user %>
-           <%= auction.expires_at %>
-           <%= auction.highest_auction_bid %>
+         <p><strong>Title:</strong>
+           <%= auction.title %></p>
+           <p><strong>Description:</strong>
+           <%= auction.description %></p>
+           <p><strong>User:</strong>
+           <%= auction.user %></p>
+           <p><strong>End Time:</strong>
+           <%= auction.expires_at %></p>
+           <p><strong>Current Bid:</strong>
+           <%= auction.highest_auction_bid %></p>
          </div>
     </div>
   <% end %>
