Made Auctions a Dropdown Menu

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -20,16 +19,21 @@
          <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li> 
-          <li><%= link_to "Current Auctions", auctions_path %></li>
-          <li><%= link_to "My Auctions", my_auctions_path %></li>
-          <li><%= profile_link_for_current_user.html_safe %></li> 
-          <li><%= link_to "Account Settings",edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to "Log in", new_user_session_path %></li>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
-        <% end %>
-
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Auctions<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "My Auctions", my_auctions_path %></li>
+            <li><%= link_to "My Bids", my_auctions_path %></li>
+            <li><%= link_to "Current Auctions", auctions_path %></li>
+            <li><%= link_to "Active Auctions", my_auctions_path %></li>
+          </ul>
+            <li><%= profile_link_for_current_user.html_safe %></li> 
+            <li><%= link_to "Account Settings",edit_user_registration_path %></li>
+            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Log in", new_user_session_path %></li>
+            <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <% end %>
         </ul>
 
 
@@ -44,7 +48,6 @@
             <button class="btn btn-default btn-lg btn btn-primary" type="button">Submit</button>
           </span>
       </div>
-      </div>       
-    </div>
-  </form>     
+      </form>  
+    </div>   
 </nav>
