--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,7 +1,7 @@
 <h4><%= link_to 'Back', auctions_path %></h4>
 
 
-<%= image_tag @auction.image.url(:medium) %>
+<%= image_tag @auction.image.url(:thumb) %>
 </p>
 
 <p>
@@ -29,17 +29,10 @@
 
 
  <% if @auction.user_id == current_user.id %>
-
-    <%= link_to edit_auction_path(@auction) do %>
-    <h4><span class="glyphicon glyphicon-pencil"></span> Edit</h4>
-    <% end %>
-
-
-    <%= link_to auction_path, method: :delete, data: { confirm: 'Are you sure?' } do %>
-    <h4><span class="glyphicon glyphicon-erase"></span> Delete</h4>
+    <h4><%= link_to 'Edit', edit_auction_path(@auction) %></h4>
+    <h4><%= link_to 'Destroy', auction_path, method: :delete, data: { confirm: 'Are you sure?' } %></h4>
  <% end %>
 
   <% if @auction.user_id != current_user.id %>
-    <h4><%= link_to "Bid on this auction", new_auction_auction_bid_path(@auction) %></h4>
- <% end %>
+    <h4><%= link_to "Bid on this auction", new_auction_auction_bids_path(@auction) %></h4>
  <% end %>
